openmetadata-ui/src/main/resources/ui/src/components/common/DomainLabel/domain-label.less
/*
 *  Copyright 2025 Collate.
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *  http://www.apache.org/licenses/LICENSE-2.0
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */
@import (reference) '../../../styles/variables.less';
.domain-label-container {
  max-width: 100%;
}
.domain-link.ant-typography {
  color: @primary-heading-color;
}

.ant-typography.domain-link-text,
.domain-link-text {
  color: @grey-700;
}

.domain-link-container {
  max-width: 100%;
  .domain-link-text {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
  }
}

.domain-tooltip-list {
  display: flex;
  flex-direction: column;
  gap: 8px;
  max-height: 200px;
  overflow-y: auto;
}

.domain-count-button {
  background-color: @primary-button-background;
  height: 32px;
  width: 32px;
  border-radius: 200px;
  text-align: center;
  text-decoration: none;
  span {
    color: @blue-24;
  }
  border: 1px solid @blue-24;
  margin-left: -4px;
}

.domain-count-label {
  font-size: 10px;
}

